# timber

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  coverage.xml  docker-compose.yml  llms.txt  mkdocs.yml  pyproject.toml  skill.md  timber_technical_doc.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  render_table.py  run_benchmarks.py  system_info.py
docs/: accel.md  advanced.md  api-reference.md  architecture.md  examples.md  faq.md  getting-started.md  index.md  ir-reference.md
examples/: README.md  bench_python.py  diagnose_accuracy.py  diagnose_base_score.py  generate_sample.py  lgb_breast_cancer.txt  quickstart_client.py  quickstart_lightgbm.py  quickstart_sklearn.py  quickstart_xgboost.py  sample_model.json  sklearn_pipeline.pkl  test_ctypes_wrapper.py  train_and_save.py  xgb_breast_cancer.json
examples/compiled/: CMakeLists.txt  Makefile  audit_report.json  bench.c  model.h  model.timber.json  model_data.c  test_samples.csv
examples/compiled_exact/: audit_report.json  main.c  model.c  model.timber.json  model_data.c
paper/: timber_paper.tex
targets/: arm64_neon.toml  x86_64_generic.toml
tests/: conftest.py  conftest_accel.py  live_test.py  test_accel_certification.py  test_accel_compilation.py  test_accel_signing.py  test_accel_simd_avx2.py  test_accel_wcet.py  test_codegen.py  test_end_to_end.py  test_fuzz.py  test_ir.py  test_kinematics.py  test_multiclass.py  test_nuclear.py  test_optimizer.py  test_phase2.py  test_phase3.py  test_phase4.py  test_primitives.py  test_rigorous.py  test_sklearn_parser.py  test_store.py  test_xgboost_parser.py
timber/: __init__.py  cli.py  downloader.py  serve.py  store.py  ui.py
timber/accel/: __init__.py  cli.py  version.py
timber/accel/_util/: crypto.py  target_loader.py
timber/accel/accel/embedded/: base.py  cortex_m.py  esp32.py  stm32.py
timber/accel/accel/gpu/: base.py  cuda.py  metal.py  opencl.py
timber/accel/accel/hls/: base.py  intel_fpga.py  xilinx_vitis.py
timber/accel/accel/simd/: avx2.py  avx512.py  base.py  neon.py  rvv.py  sve.py
timber/accel/compliance_profiles/: do_178c.toml  iec_62304.toml  iso_26262.toml
timber/accel/deploy/autonomy/: px4.py  ros2.py
timber/accel/deploy/bundle/: bundler.py  manifest.py
timber/accel/deploy/sensors/: radar.py  rf.py  telemetry.py
timber/accel/deploy/serve_native/: builder.py  grpc_proto.py  server_gen.py
timber/accel/safety/certification/: do_178c.py  iec_62304.py  iso_26262.py  profiles.py  report.py
timber/accel/safety/realtime/: constant_time.py  deterministic.py  wcet.py
timber/accel/safety/supply_chain/: encryption.py  signing.py  tpm.py  verification.py
timber/accel/targets/: arm_neon_simd.toml  arm_sve_simd.toml  cuda_sm75.toml  cuda_sm86.toml  embedded_cortex_m4.toml  embedded_esp32.toml  embedded_stm32.toml  hls_intel.toml  hls_xilinx.toml  metal_apple_m1.toml  opencl_generic.toml  riscv_rvv_simd.toml  x86_64_avx2.toml  x86_64_avx2_simd.toml  x86_64_avx512.toml  x86_64_avx512_simd.toml
timber/audit/: __init__.py  report.py
timber/codegen/: __init__.py  c99.py  llvm_ir.py  misra_c.py  wasm.py
timber/frontends/: __init__.py  auto_detect.py  catboost_parser.py  lightgbm_parser.py  onnx_parser.py  sklearn_parser.py  urdf_parser.py  xgboost_parser.py
timber/ir/: __init__.py  ensemble_meta.py  model.py
timber/optimizer/: __init__.py  branch_sort.py  constant_feature.py  dead_leaf.py  diff_compile.py  pipeline.py  pipeline_fusion.py  threshold_quant.py  vectorize.py
timber/privacy/: __init__.py  dp.py
timber/runtime/: __init__.py  predictor.py
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: benchmarks.md  configuration.md  contributing.md  getting-started.md  how-it-works.md  intro.md  troubleshooting.md
website/docs/api-reference/: c-api.md  cli.md  http-api.md  python-api.md
website/docs/architecture/: code-generation.md  compiler-pipeline.md  intermediate-representation.md  optimization-passes.md
website/docs/examples/: catboost.md  http-client.md  lightgbm.md  onnx.md  sklearn.md  xgboost.md
website/docs/guides/: acceleration.md  audit-trails.md  differential-compilation.md  embedding-in-c.md  ensemble-composition.md  iot-edge-deployment.md  loading-models.md  misra-c-compliance.md  python-predictor.md  serving-models.md  wasm-deployment.md
website/src/css/: custom.css
website/src/pages/: index.tsx
