[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timber-compiler"
version = "0.1.0"
description = "Classical ML Inference Compiler — compiles trained ML models into optimized native inference binaries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kossiso Royce", email = "kossiso@electricsheep.africa"},
]
keywords = ["ml", "compiler", "inference", "xgboost", "lightgbm", "sklearn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "tomli>=2.0;python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/kossisoroyce/timber"
Documentation = "https://kossisoroyce.github.io/timber/"
Repository = "https://github.com/kossisoroyce/timber"
Issues = "https://github.com/kossisoroyce/timber/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
]

[project.scripts]
timber = "timber.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["timber*"]

[tool.setuptools.package-data]
timber = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
