[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timber-compiler"
version = "0.4.0"
description = "Classical ML Inference Compiler — compiles XGBoost, LightGBM, sklearn, CatBoost, and ONNX models to optimized C99 / LLVM IR / WASM inference artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kossiso Royce", email = "kossiso@electricsheep.africa"},
]
keywords = ["ml", "compiler", "inference", "xgboost", "lightgbm", "sklearn", "onnx", "llvm", "embedded", "misra", "differential-privacy", "c99", "wasm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "rich>=13.0",
    "requests>=2.28",
    "tomli>=2.0;python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/kossisoroyce/timber"
Documentation = "https://kossisoroyce.github.io/timber/"
Repository = "https://github.com/kossisoroyce/timber"
Issues = "https://github.com/kossisoroyce/timber/issues"
Changelog = "https://github.com/kossisoroyce/timber/blob/main/CHANGELOG.md"

[project.optional-dependencies]
serve = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "anyio>=4.0",
]
full = [
    "rich>=13.0",
    "requests>=2.28",
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "onnx>=1.17.0",
    "skl2onnx>=1.17",
    "ml-dtypes>=0.5.0",
]
privacy = [
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "onnx>=1.17.0",
    "skl2onnx>=1.17",
    "ml-dtypes>=0.5.0",
]

[project.scripts]
timber = "timber.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["timber*"]

[tool.setuptools.package-data]
timber = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["timber"]
omit = ["timber/audit/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F841"]
